--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 #main {
     flex: 1;
-    background: rgba(0, 0, 0, 0.552);
+    background: rgba(0, 0, 0, 0.297);
 }
 
 /* Navigation Bar */
@@ -108,13 +108,13 @@ body {
 }
 
 #home h1 {
-    color: white;
+    color: rgb(249, 246, 246);
     text-align: center;
     font-family: "Bree Serif", serif;
 }
 
 #home p {
-    color: white;
+    color: rgb(137, 21, 21);
     text-align: center;
     font-size: 1.5rem;
     font-family: "Bree Serif", serif;
@@ -130,7 +130,7 @@ body {
     padding: 2em;
     margin: 3px 6px;
     border-radius: 23px;
-    background-color: #ffffff30;
+    background-color: #ffffff43;
     box-shadow: 0 0 12px 2px #121212;
     letter-spacing: 1px;
     font-weight: 500;
@@ -255,7 +255,7 @@ footer {
     font-weight: 300;
     padding: 20px;
     font-family: "Bree Serif", serif;
-    color: white;
+    color: rgb(161,204,165);
 }
 
 .h-secondary {
