--- a/style.css
+++ b/style.css
@@ -1,196 +1,195 @@
 /* CSS reset */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    border: 0;
-    outline: 0;
-
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  border: 0;
+  outline: 0;
 }
 
 /* CSS Variables */
 :root {
-    --navbar-height: 59px;
+  --navbar-height: 59px;
 }
 
 body {
-    background: url("./Img/leaf.jpeg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  background: url("./Img/backgroundPlant6.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 #main {
-    flex: 1;
-    background: rgba(0, 0, 0, 0.297);
+  flex: 1;
+  background: rgba(0, 0, 0, 0.297);
 }
 
 /* Navigation Bar */
 #navbar {
-    display: flex;
-    position: sticky;
-    top: 0px;
-    align-items: center;
+  display: flex;
+  position: sticky;
+  top: 0px;
+  align-items: center;
 }
 
 #navbar::before {
-    content: "";
-    background: rgba(0, 0, 0, 0.552);
+  content: "";
+  background: rgba(0, 0, 0, 0.552);
 
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0px;
-    left: 0px;
-    z-index: -1;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: -1;
 }
 
 /* Navigation Bar: Logo and Image */
 #logo {
-    margin: 10px 20px;
+  margin: 10px 20px;
 }
 
 #logo img {
-    height: 56px;
-    margin: 6px 8px;
+  height: 56px;
+  margin: 6px 8px;
 }
 
 /* Navigation Bar: List Styling */
 #navbar ul {
-    display: flex;
-    font-family: "Baloo Bhai 2", cursive;
+  display: flex;
+  font-family: "Baloo Bhai 2", cursive;
 }
 
 #navbar ul li {
-    list-style: none;
-    font-size: 1.3rem;
+  list-style: none;
+  font-size: 1.3rem;
 }
 
 #navbar ul li a {
-
-    /*color: hsl(0, 0%, 100%);*/
-    color: rgb(161, 204, 165);
-    display: block;
-    padding: 9px 40px;
-    border-radius: 20px;
-    text-decoration: none;
+  /*color: hsl(0, 0%, 100%);*/
+  color: rgb(161, 204, 165);
+  display: block;
+  padding: 9px 40px;
+  border-radius: 20px;
+  text-decoration: none;
 }
 
 #navbar ul li a:hover {
-    color: rgb(255, 255, 255);
-    background-color: rgb(64, 95, 74);
+  color: rgb(255, 255, 255);
+  background-color: rgb(64, 95, 74);
 }
 
 /* Home Section */
 
 #home {
-    display: flex;
-    flex-direction: column;
-    /*padding: 3px 200px;*/
-    /*height: 500px;*/
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  /*padding: 3px 200px;*/
+  /*height: 500px;*/
+  justify-content: center;
+  align-items: center;
 }
 
 #home::before {
-    content: "";
-    position: absolute;
-    background: url('https://thatsuman.github.io/web-dev-projects/SafeMeal/assets/salad.jpg') no-repeat center center/cover;
-    height: 613px;
-    width: 100%;
-    top: 0px;
-    left: 0px;
-    z-index: -1;
-    opacity: 0.89;
+  content: "";
+  position: absolute;
+  background: url("https://thatsuman.github.io/web-dev-projects/SafeMeal/assets/salad.jpg")
+    no-repeat center center/cover;
+  height: 613px;
+  width: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: -1;
+  opacity: 0.89;
 }
 
 #home h1 {
-    color: rgb(249, 246, 246);
-    text-align: center;
-    font-family: "Bree Serif", serif;
+  color: rgb(249, 246, 246);
+  text-align: center;
+  font-family: "Bree Serif", serif;
 }
 
 #home p {
-    color: rgb(137, 21, 21);
-    text-align: center;
-    font-size: 1.5rem;
-    font-family: "Bree Serif", serif;
+  color: rgb(137, 21, 21);
+  text-align: center;
+  font-size: 1.5rem;
+  font-family: "Bree Serif", serif;
 }
 
 /* Services Section */
 #services {
-    margin: 12px;
-    display: flex;
+  margin: 12px;
+  display: flex;
 }
 
 #services .box {
-    padding: 2em;
-    margin: 3px 6px;
-    border-radius: 23px;
-    background-color: #ffffff43;
-    box-shadow: 0 0 12px 2px #121212;
-    letter-spacing: 1px;
-    font-weight: 500;
-    text-shadow: 0px 0px 1px black;
+  padding: 2em;
+  margin: 3px 6px;
+  border-radius: 23px;
+  background-color: #ffffff43;
+  box-shadow: 0 0 12px 2px #121212;
+  letter-spacing: 1px;
+  font-weight: 500;
+  text-shadow: 0px 0px 1px black;
 }
 
 #services .box img {
-    height: 80px;
-    margin: auto;
-    display: block;
+  height: 80px;
+  margin: auto;
+  display: block;
 }
 
 #services .box p {
-    font-family: "Bree Serif", serif;
+  font-family: "Bree Serif", serif;
 }
 
 /* Partners Section */
 #partners-section {
-    position: relative;
+  position: relative;
 }
 
 #partners-section::before {
-    content: "";
-    position: absolute;
-    background: url('https://thatsuman.github.io/web-dev-projects/SafeMeal/assets/pizza_2.jpg');
-    width: 100%;
-    height: 294px;
-    z-index: -1;
-    opacity: 0.4;
+  content: "";
+  position: absolute;
+  background: url("https://thatsuman.github.io/web-dev-projects/SafeMeal/assets/pizza_2.jpg");
+  width: 100%;
+  height: 294px;
+  z-index: -1;
+  opacity: 0.4;
 }
 
 #our-partners {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .partners-logo {
-    margin: 10px 34px;
+  margin: 10px 34px;
 }
 
 .partners-logo img {
-    height: 124px;
+  height: 124px;
 }
 
 .h-partners {
-    font-size: 3.5rem;
-    font-weight: 300;
-    color: black;
-    padding: 12px;
-    font-family: "Bree Serif", serif;
+  font-size: 3.5rem;
+  font-weight: 300;
+  color: black;
+  padding: 12px;
+  font-family: "Bree Serif", serif;
 }
 
 #foodpanda {
-    justify-content: center;
-    height: 131px;
-    width: 85px;
-    display: flex;
-    position: relative;
-    padding-left: 10px;
+  justify-content: center;
+  height: 131px;
+  width: 85px;
+  display: flex;
+  position: relative;
+  padding-left: 10px;
 }
 
 /* Contact Section 
@@ -234,60 +233,95 @@ body {
 }
 */
 
-
-
-/* Footer */
-footer {
-    background-color: black;
-    color: white;
-    padding: 9px 20px;
-}
-
 /* Utility Classes */
 .h-primary {
-    font-size: 3.8rem;
-    padding: 12px;
-    font-family: "Bree Serif", serif;
+  font-size: 3.8rem;
+  padding: 12px;
+  font-family: "Bree Serif", serif;
 }
 
 .h-primary-services {
-    font-size: 3.5rem;
-    font-weight: 300;
-    padding: 20px;
-    font-family: "Bree Serif", serif;
-    color: rgb(161,204,165);
+  font-size: 3.5rem;
+  font-weight: 300;
+  padding: 20px;
+  font-family: "Bree Serif", serif;
+  color: rgb(161, 204, 165);
 }
 
 .h-secondary {
-    font-size: 2.8rem;
-    font-weight: 400;
-    padding: 12px;
-    font-family: "Bree Serif", serif;
-    color:white;
+  font-size: 2.8rem;
+  font-weight: 400;
+  padding: 12px;
+  font-family: "Bree Serif", serif;
+  color: white;
 }
 
 .btn {
-    padding: 6px 20px;
-    margin: 17px;
-    border: 2px solid white;
-    background-color: rgb(188, 14, 14);
-    color: white;
-    font-size: 1.5rem;
-    border-radius: 16px;
-    cursor: pointer;
-    display: block;
-    margin: 3em auto;
+  padding: 6px 20px;
+  margin: 17px;
+  border: 2px solid white;
+  background-color: rgb(188, 14, 14);
+  color: white;
+  font-size: 1.5rem;
+  border-radius: 16px;
+  cursor: pointer;
+  display: block;
+  margin: 3em auto;
 }
 
 .btn:hover {
-    color: rgb(1, 21, 1);
-    background-color: rgb(161, 204, 165);
+  color: rgb(1, 21, 1);
+  background-color: rgb(161, 204, 165);
 }
 
 .center {
-    text-align: center;
+  text-align: center;
 }
 
 .service-font {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
+}
+
+footer {
+  background-color: rgba(44, 41, 41, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px;
+  height: 70px;
+}
+.socialMedia {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 5px;
+}
+footer p {
+  font-size: 20px;
+  color: white;
+}
+.fa {
+  padding: 5px 30px;
+  font-size: 40px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa-facebook {
+  color: white;
+}
+
+/* Twitter */
+.fa-twitter {
+  color: white;
+}
+.fa:hover {
+  opacity: 0.7;
+}
+.fa-instagram {
+  color: white;
+}
+.fa-google {
+  color: white;
 }
