--- a/css/involve.css
+++ b/css/involve.css
@@ -3,6 +3,23 @@
   --white: #ffffff;
 }
 
+body {
+  font-family: "Quicksand", sans-serif;
+}
+
+.brief h1,
+h2,
+p {
+  text-align: center;
+  color: black;
+  font-weight: bolder;
+}
+hr {
+  height: 2px;
+  background-color: #a4ccc6;
+  border: none;
+  width: 60%;
+}
 #navbar {
   display: flex;
   position: sticky;
@@ -72,12 +89,6 @@
   transform: translate(-50%, -50%);
 }
 
-.text-img h1,
-h2 {
-  color: rgb(255, 233, 247);
-  font-size: 36px;
-}
-
 #digital-clock {
   color: #ffffff;
   font-size: 6vh;
@@ -98,6 +109,7 @@ h2 {
   gap: 1.5rem;
   box-shadow: rgb(0 0 0 / 24%) -4px 3px 8px;
   z-index: 1;
+  padding: 0 1em;
 }
 
 .event {
@@ -113,11 +125,19 @@ h2 {
 .event1 {
   width: 100%;
   height: 25rem;
-  background-color: #b3d9af;
+  background-color: #a4ccc6;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
   gap: 5rem;
+  justify-content: flex-end;
+  justify-content: space-evenly;
+}
+
+.half {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .signup {
@@ -131,7 +151,9 @@ h2 {
   align-items: center;
   font-size: 18px;
 }
-
+.section p {
+  text-align: center;
+}
 button {
   background-color: #04aa6d;
   border-radius: 30%;
