--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 /* CSS reset */
+body {
+  font-family: "Quicksand", sans-serif;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -33,7 +37,6 @@ body {
   position: sticky;
   top: 0px;
   align-items: center;
-  font-family: "Quicksand", sans-serif;
 }
 
 #navbar::before {
@@ -110,31 +113,29 @@ body {
 #home h1 {
   color: rgb(249, 246, 246);
   text-align: center;
-  font-family: "Bree Serif", serif;
 }
 
 #home p {
   color: rgb(137, 21, 21);
   text-align: center;
   font-size: 1.5rem;
-  font-family: "Bree Serif", serif;
 }
 
 /* Services Section */
 #services {
   margin: 12px;
   display: flex;
+  justify-content: space-evenly;
 }
 
 #services .box {
   padding: 2em;
   margin: 3px 6px;
   border-radius: 23px;
-  background-color: #ffffff43;
+  background-color: #ffffff0a;
   box-shadow: 0 0 12px 2px #121212;
   letter-spacing: 1px;
-  font-weight: 500;
-  text-shadow: 0px 0px 1px black;
+  text-shadow: 0px 0px 20px black;
   width: 30%;
 }
 
@@ -143,9 +144,9 @@ body {
   margin: auto;
   display: block;
 }
-
-#services .box p {
-  font-family: "Bree Serif", serif;
+.p center {
+  font-weight: bolder;
+  text-shadow: 0px 0px 60px black;
 }
 
 /* Partners Section */
@@ -186,7 +187,6 @@ body {
   font-weight: 300;
   color: black;
   padding: 12px;
-  font-family: "Bree Serif", serif;
 }
 
 #foodpanda {
@@ -243,14 +243,12 @@ body {
 .h-primary {
   font-size: 3.8rem;
   padding: 12px;
-  font-family: "Bree Serif", serif;
 }
 
 .h-primary-services {
   font-size: 3.5rem;
   font-weight: 300;
   padding: 20px;
-  font-family: "Bree Serif", serif;
   color: white;
 }
 
@@ -258,7 +256,6 @@ body {
   font-size: 2.8rem;
   font-weight: 400;
   padding: 12px;
-  font-family: "Bree Serif", serif;
   color: white;
 }
 
@@ -274,9 +271,13 @@ body {
   display: block;
   margin: 3em auto;
 }
+.btn a {
+  text-decoration: none;
+  color: white;
+}
 
 .btn:hover {
-  color: rgb(1, 21, 1);
+  color: white;
   background-color: rgb(161, 204, 165);
 }
 
